--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: "poppins";
     color: #656565;
+    background-color: #f3f3f3;
 }
 
 /* ?text-color */
@@ -17,9 +18,25 @@ body {
     color: #212121;
 }
 
+.text-black-hover {
+    color: #212121;
+}
+
+.text-black-hover:hover {
+    color: #7ab730;
+}
+
 /* *texto-styles */
 .text-center {
     text-align: center;
+}
+
+.text-dnone {
+    text-decoration: none;
+}
+
+.letter-spancing-5 {
+    letter-spacing: 5px;
 }
 
 /* *border */
@@ -35,8 +52,20 @@ body {
     border: 2px solid #7ab730;
 }
 
+.b-white {
+    border: 1px solid #fff;
+}
+
 
 /* *height */
+.lh-25 {
+    line-height: 25px;
+}
+
+.lh-35 {
+    line-height: 35px;
+}
+
 .lh-40 {
     line-height: 40px;
 }
@@ -45,13 +74,28 @@ body {
     height: 15px;
 }
 
+.h-100p {
+    height: 100px;
+}
+
+.h-500p {
+    height: 500px;
+}
+
 .h-30vh {
     height: 30vh;
 }
 
 /* *width */
+.w-100p {
+    width: 100px;
+}
 
 /* *padding */
+.pb-25 {
+    padding-bottom: 25px;
+}
+
 .pb-20 {
     padding-bottom: 20px;
 }
@@ -62,6 +106,10 @@ body {
 
 .pb-5 {
     padding-bottom: 5px;
+}
+
+.pt-25 {
+    padding-top: 25px;
 }
 
 .pt-20 {
@@ -76,16 +124,44 @@ body {
     padding-top: 5px;
 }
 
+.pl-10 {
+    padding-left: 10px;
+}
+
 .pl-15 {
     padding-left: 15px;
+}
+
+.pl-20 {
+    padding-left: 20px;
+}
+
+.pr-10 {
+    padding-right: 10px;
 }
 
 .pr-15 {
     padding-right: 15px;
 }
 
+.pr-20 {
+    padding-right: 20px;
+}
+
 .p-button {
     padding: 10px 20px;
+}
+
+.p-35 {
+    padding: 35px;
+}
+
+.p-30 {
+    padding: 30px;
+}
+
+.p-20 {
+    padding: 20px;
 }
 
 .p-10 {
@@ -98,8 +174,40 @@ body {
     margin-top: 5px;
 }
 
+.mt-48 {
+    margin-top: 48px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+.mt-100 {
+    margin-top: 100px;
+}
+
+.mt-200 {
+    margin-top: 200px;
+}
+
+.mb-45 {
+    margin-bottom: 45px;
+}
+
+.mb-25 {
+    margin-bottom: 25px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
 .mb-10 {
     margin-bottom: 10px;
+}
+
+.mb-5 {
+    margin-bottom: 5px;
 }
 
 .ml-7 {
@@ -173,8 +281,8 @@ body {
     background-color: #7ab730;
 }
 
-.bg-cape {
-    background-color: rgb(0 0 0 / 50%);
+.bg-white {
+    background-color: #fff;
 }
 
 /* *image */
@@ -183,4 +291,39 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+/* *box-shadow */
+
+.box-form {
+    box-shadow: 0px 10px 20px -5px #656565;
+}
+
+/* *lados */
+
+.top-0 {
+    top: 0;
+}
+
+/* !clases especiale */
+
+.destination-items {
+    transition: 0.5s;
+}
+
+.cape {
+    background-color: rgb(0 0 0 / 50%);
+    outline: 1px solid rgba(255, 255, 255, 0.5);
+    transition: 0.5s;
+}
+
+.destination:hover .cape {
+    outline-width: 35px;
+}
+
+.destination:hover .destination-items {
+    overflow: hidden;
+    transform: scale(1.2);
+    border-width: 30px;
+    z-index: 1;
 }
