--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #f3f3f3;
 }
 
-/* ?text-color */
+/* ?_________________________________text-color______________________________________ */
 
 .text-green-limon {
     color: #7ab730;
@@ -26,7 +26,7 @@ body {
     color: #7ab730;
 }
 
-/* *texto-styles */
+/* ?__________________________________________texto-styles______________________________ */
 .text-center {
     text-align: center;
 }
@@ -39,9 +39,17 @@ body {
     letter-spacing: 5px;
 }
 
-/* *border */
+.lista-dnone {
+    list-style: none;
+}
+
+/* ?_______________________________________________border_________________________________ */
 .bright-grey {
     border-right: 1px solid #656565;
+}
+
+.bt-dark-white {
+    border-top: 1px solid #dee2e6;
 }
 
 .b-rgba-grey {
@@ -57,7 +65,7 @@ body {
 }
 
 
-/* *height */
+/* ?________________________________________________height_________________________________ */
 .lh-25 {
     line-height: 25px;
 }
@@ -86,18 +94,30 @@ body {
     height: 30vh;
 }
 
-/* *width */
+/* ?________________________________________________width________________________________ */
 .w-100p {
     width: 100px;
 }
 
-/* *padding */
+/* ?__________________________________________________padding_________________________________ */
+.pb-100 {
+    padding-bottom: 100px;
+}
+
+.pb-45 {
+    padding-bottom: 45px;
+}
+
 .pb-25 {
     padding-bottom: 25px;
 }
 
 .pb-20 {
     padding-bottom: 20px;
+}
+
+.pb-15 {
+    padding: 15px;
 }
 
 .pb-10 {
@@ -108,12 +128,25 @@ body {
     padding-bottom: 5px;
 }
 
+.pt-100 {
+    padding-top: 100px;
+}
+
+
+.pt-45 {
+    padding-top: 45px;
+}
+
 .pt-25 {
     padding-top: 25px;
 }
 
 .pt-20 {
     padding-top: 20px;
+}
+
+.pt-15 {
+    padding-top: 15px;
 }
 
 .pt-10 {
@@ -152,12 +185,20 @@ body {
     padding: 10px 20px;
 }
 
+.p-40 {
+    padding: 40px;
+}
+
 .p-35 {
     padding: 35px;
 }
 
 .p-30 {
     padding: 30px;
+}
+
+.p-15 {
+    padding: 15px;
 }
 
 .p-20 {
@@ -168,10 +209,22 @@ body {
     padding: 10px;
 }
 
-/* *margin */
+/* ?___________________________________________margin______________________________________ */
+
+.m-auto {
+    margin: auto;
+}
 
 .mt-5 {
     margin-top: 5px;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mt-20 {
+    margin-top: 20px;
 }
 
 .mt-48 {
@@ -194,12 +247,24 @@ body {
     margin-bottom: 45px;
 }
 
+.mb-40 {
+    margin-bottom: 40px;
+}
+
+.mb-30 {
+    margin-bottom: 30px;
+}
+
 .mb-25 {
     margin-bottom: 25px;
 }
 
 .mb-20 {
     margin-bottom: 20px;
+}
+
+.mb-15 {
+    margin-bottom: 15px;
 }
 
 .mb-10 {
@@ -226,7 +291,11 @@ body {
     margin-right: 15px;
 }
 
-/* *font-size */
+.mr-7 {
+    margin-right: 7px;
+}
+
+/* ?_______________________________________________________font-size_____________________ */
 .fs-15 {
     font-size: 15px;
 }
@@ -267,7 +336,7 @@ body {
     font-size: 55px;
 }
 
-/* *background */
+/* ?________________________________________________background______________________________ */
 
 .bg-primary-01 {
     background-image: url(../images/carousel-1.jpg);
@@ -275,6 +344,10 @@ body {
 
 .bg-primary-02 {
     background-image: url(../images/carousel-2.jpg);
+}
+
+.bg-secundary {
+    background-color: rgb(0 0 0 / 50%);
 }
 
 .bg-green-limon {
@@ -285,7 +358,7 @@ body {
     background-color: #fff;
 }
 
-/* *image */
+/* ?________________________________________________image________________________________ */
 
 .pack-image {
     background-position: center;
@@ -293,19 +366,19 @@ body {
     background-repeat: no-repeat;
 }
 
-/* *box-shadow */
+/* ?______________________________________________box-shadow_______________________________ */
 
 .box-form {
     box-shadow: 0px 10px 20px -5px #656565;
 }
 
-/* *lados */
+/* ?_________________________________________________lados______________________________ */
 
 .top-0 {
     top: 0;
 }
 
-/* !clases especiale */
+/* !_____________________________________clases especiale_______________________________ */
 
 .destination-items {
     transition: 0.5s;
@@ -326,4 +399,52 @@ body {
     transform: scale(1.2);
     border-width: 30px;
     z-index: 1;
+}
+
+.square-icons-green {
+    height: 75px;
+    width: 75px;
+    border: 1px solid #7ab730;
+}
+
+.ttraslate-y-50 {
+    transform: translateY(50px);
+}
+
+.date-blog {
+    background-color: #7ab730;
+    width: 55px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    top: 25px;
+    left: -15px;
+}
+
+.date-blog::after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    top: -15px;
+    left: 0;
+    border-left: 8px solid transparent;
+    border-top: 8px solid transparent;
+    border-right: 8px solid #5f8f25;
+    border-bottom: 8px solid #5f8f25;
+    z-index: 1;
+
+}
+
+.triangulo {
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-top: 50px solid transparent;
+    border-right: 50px solid #7ab730;
+    border-bottom: 50px solid #7ab730;
+    top: 20px;
+    left: -15px
 }
