arreglos de los items
arreglo de los items.

--- a/asset/css/mediaquery.css
+++ b/asset/css/mediaquery.css
@@ -145,7 +145,37 @@
 }
 
 /* ?__________________________________________destok-mediun________________________________ */
-@media screen and (min-width:992px) {}
+@media screen and (min-width:992px) {
+    /* *_________________________________________________________________clases especiales */
+
+    .ttraslateY-lg-30 {
+        transform: translateY(30px);
+    }
+
+    /* *width____________________________________________________________________________ */
+    .w-lg-95 {
+        width: 95%;
+    }
+
+    /* *_____________________________________________________________________________margin */
+    .m-lg-auto {
+        margin: auto;
+    }
+
+    /* *padding___________________________________________________________________________ */
+    .pl-lg-25 {
+        padding-left: 25px;
+    }
+
+    .pr-lg-25 {
+        padding-right: 25px;
+    }
+
+    /* *____________________________________________________________________________font-size */
+    .fs-lg-36 {
+        font-size: 36px;
+    }
+}
 
 
 /* ?_________________________________________destok-largue__________________________________ */
