se realizaron los cambios de hoy
hasta el  fondo primary

--- a/asset/css/mediaquery.css
+++ b/asset/css/mediaquery.css
@@ -15,6 +15,13 @@
     }
 
     /* *____________________________________________________________________width */
+    .w-lg-40 {
+        width: 40%;
+    }
+
+    .w-lg-60 {
+        width: 60%;
+    }
 
     /* *font-size_________________________________________________________________ */
     .fs-md-16 {
@@ -93,6 +100,9 @@
     }
 
     /* *______________________________________________________________________________margin */
+    .mt-lg-0 {
+        margin-top: 0px;
+    }
 
     .mt-md-10 {
         margin-top: 10px;
@@ -153,6 +163,11 @@
     }
 
     /* *width____________________________________________________________________________ */
+
+    .w-lg-60 {
+        width: 60%;
+    }
+
     .w-lg-95 {
         width: 95%;
     }
@@ -163,17 +178,68 @@
     }
 
     /* *padding___________________________________________________________________________ */
+    .pl-lg-10 {
+        padding-left: 10px;
+    }
+
+    .pl-lg-15 {
+        padding-left: 15px;
+    }
+
     .pl-lg-25 {
         padding-left: 25px;
+    }
+
+    .pr-lg-10 {
+        padding-right: 10px;
+    }
+
+    .pr-lg-15 {
+        padding-right: 15px;
     }
 
     .pr-lg-25 {
         padding-right: 25px;
     }
 
+    .pt-lg-15 {
+        padding-top: 15px;
+    }
+
+    .pb-lg-15 {
+        padding-bottom: 15px;
+    }
+
     /* *____________________________________________________________________________font-size */
     .fs-lg-36 {
         font-size: 36px;
+    }
+
+    .fs-lg-65 {
+        font-size: 65px;
+    }
+
+    /* *height_____________________________________________________________________________ */
+    .lh-lg-80 {
+        line-height: 80px;
+    }
+
+    .h-lg-650 {
+        height: 650px;
+    }
+
+    .h-lg-80vh {
+        height: 80vh;
+    }
+
+    /* *_______________________________________________________________________________lados */
+
+    .top-lg-18 {
+        top: 18px;
+    }
+
+    .right-lg-0 {
+        right: 0;
     }
 }
 
