--- a/asset/css/font-face.css
+++ b/asset/css/font-face.css
@@ -1,8 +1,27 @@
 @font-face {
     font-family: "poppins";
-    src: url(../font/Poppins-Bold.ttf);
-    font-weight: bold;
+    src: url(../font/Poppins-Light.ttf);
+    font-weight: 100;
 }
+
+@font-face {
+    font-family: "poppins";
+    src: url(../font/Poppins-Regular.ttf);
+    font-weight: 200;
+}
+
+@font-face {
+    font-family: "poppins";
+    src: url(../font/Poppins-Medium.ttf);
+    font-weight: 300;
+}
+
+/* @font-face {
+    font-family: "poppins";
+    src: url(../font/Poppins-Medium.ttf);
+    font-size: 18px;
+    font-weight: 400;
+} */
 
 @font-face {
     font-family: "poppins";
@@ -12,24 +31,12 @@
 
 @font-face {
     font-family: "poppins";
-    src: url(../font/Poppins-Light.ttf);
-    font-weight: 100;
-}
-
-@font-face {
-    font-family: "poppins";
-    src: url(../font/Poppins-Medium.ttf);
-    font-weight: 300;
+    src: url(../font/Poppins-Bold.ttf);
+    font-weight: bold;
 }
 
 @font-face {
     font-family: "poppins";
     src: url(../font/Poppins-ExtraBold.ttf);
     font-weight: bolder;
-}
-
-@font-face {
-    font-family: "poppins";
-    src: url(../font/Poppins-Regular.ttf);
-    font-weight: 200;
 }
